Fri Jul 16 11:17:38 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exit_initialize): use EXIT_SUCCESS instead of 0.
	  [ruby-dev:23913]

	* error.c (exit_success_p): new method SystemExit#success?.
	  [ruby-dev:23912]

	* error.c (syserr_initialize): initialization for subclasses.
	  [ruby-dev:23912]

Thu Jul 15 23:53:38 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#warn, OptionParser#abort): Exception
	  no longer has to_str method.

Thu Jul 15 22:59:48 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/extconf.rb: added dir_config for curses, ncurses,
	termcap. (backported from HEAD)

Thu Jul 15 20:29:15 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* class.c, error.c, eval.c, intern.h, object.c, variable.c:
	  do not set path if it is a singleton class.  [ruby-dev:22588]
	  (backport from 1.9)

Thu Jul 15 10:15:04 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/, ext/tcltklib/: bug fix

	* ext/tk/lib/tk.rb: better operation for SIGINT when processing
	  callbacks.
	* ext/tk/lib/tk/msgcat.rb: ditto.
	* ext/tk/lib/tk/variable.rb: ditto.
	* ext/tk/lib/tk/timer.rb: ditto.

	* ext/tk/lib/tk/validation.rb: add Tk::ValidateConfigure.__def_validcmd
	  to define validatecommand methods easier

	* ext/tk/lib/tk.rb (_genobj_for_tkwidget): support autoload Tk ext
	  classes

	* ext/tk/lib/tk/canvas.rb and so on: remove the parent widget type
	  check for items (e.g. canvas items; depends on the class) to
	  avoid some troubles on Tk extension widget class definition.

	* ext/tk/lib/tkextlib/: add Iwidget and TkTable extension support

	* ext/tk/sample/tkextlib/: add samples of Iwidget and TkTable


Wed Jul 14 18:08:37 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1cons_to_der): fix type of
	  argument. [ruby-dev:23891]

	* test/openssl/test_x509store.rb: prune tests for CRL checking
	  unless X509::V_FLAG_CRL_CHECK is defined.
